新增avue相关能力升级